envoy/envoy.yaml
static_resources:
  listeners:
    - name: listener_http
      address:
        socket_address:
          address: ${ENVOY_HOST}
          port_value: ${ENVOY_PORT}
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                codec_type: AUTO
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: frontend
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/api/"
                          route:
                            cluster: api_service
                            prefix_rewrite: "/"
                        - match:
                            prefix: "/lt/"
                          route:
                            cluster: languagetool
                            prefix_rewrite: "/"
                        - match:
                            prefix: "/wn/"
                          route:
                            cluster: wordnet
                            prefix_rewrite: "/"
                        - match:
                            prefix: "/"
                          route:
                            cluster: web_service
                            upgrade_configs:
                              - upgrade_type: websocket
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
    - name: web_service
      connect_timeout: 0.25s
      type: STRICT_DNS
      load_assignment:
        cluster_name: web_service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: front
                      port_value: 5173
    - name: api_service
      connect_timeout: 0.25s
      type: STRICT_DNS
      load_assignment:
        cluster_name: api_service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: backend
                      port_value: 8000
    - name: languagetool
      connect_timeout: 0.25s
      type: STRICT_DNS
      load_assignment:
        cluster_name: languagetool
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 172.17.0.1
                      port_value: 8010
    - name: wordnet
      connect_timeout: 0.25s
      type: STRICT_DNS
      load_assignment:
        cluster_name: wordnet
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: wordnet
                      port_value: 5000
